still working on openapi DTO and api, created front end with react
